fix: CSS layout issues on small screens

--- a/src/components/Chatbox/Chatbox.module.css
+++ b/src/components/Chatbox/Chatbox.module.css
@@ -1,4 +1,14 @@
 
+@media (max-width:400px){
+    .chatbox{
+        max-width: 55%;
+    }
+
+    .group_info{
+        visibility: hidden;
+        width: 0px;
+    }
+}
 
 .chatbox{
     display: flex;
